refactor and more ideas